[gd_scene load_steps=9 format=3 uid="uid://ent87jxa06cd"]

[ext_resource type="Texture2D" uid="uid://bmgaftg46twi4" path="res://Assets/menubg.jpg" id="1_dqkls"]
[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1_i64r5"]
[ext_resource type="FontFile" uid="uid://r4g4f3bu2a4a" path="res://Assets/GrapeSoda.ttf" id="2_dx6vy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_olfik"]
texture = ExtResource("1_dqkls")
modulate_color = Color(0.206914, 0.206914, 0.206914, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_avjxe"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(2.08165e-12, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6bta"]
bg_color = Color(0.821789, 0.821789, 0.821789, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(2.08165e-12, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lvlym"]
bg_color = Color(0.627635, 0.627635, 0.627635, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(2.08165e-12, 3.41)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jclck"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i64r5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_olfik")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = -62.0
offset_right = 181.5
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_avjxe")
theme_override_styles/hover = SubResource("StyleBoxFlat_s6bta")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lvlym")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jclck")
text = "Start Game"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_avjxe")
theme_override_styles/hover = SubResource("StyleBoxFlat_s6bta")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lvlym")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jclck")
text = "Options"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_avjxe")
theme_override_styles/hover = SubResource("StyleBoxFlat_s6bta")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lvlym")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jclck")
text = "Exit"

[node name="GameName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5
offset_top = -186.0
offset_right = 83.5
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_dx6vy")
theme_override_font_sizes/font_size = 100
text = "Jump n Run"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
