[gd_scene load_steps=4 format=3 uid="uid://ksi73shp8s06"]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1_rhrfi"]
[ext_resource type="Texture2D" uid="uid://bddooo6ce63lc" path="res://Assets/loading-screen-cat.png" id="2_2btuc"]
[ext_resource type="FontFile" uid="uid://r4g4f3bu2a4a" path="res://Assets/fonts/GrapeSoda.ttf" id="3_vn001"]

[node name="Error404" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rhrfi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2btuc")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -160.0
offset_right = 506.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_vn001")
theme_override_font_sizes/font_size = 150
text = "ERROR 404"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 277.0
offset_top = -34.0
offset_right = 395.0
offset_bottom = -8.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_vn001")
theme_override_font_sizes/font_size = 25
text = "NOT FOUND!"

[node name="back_to_mainmenu" type="Button" parent="."]
offset_right = 46.0
offset_bottom = 31.0
text = "<"

[connection signal="pressed" from="back_to_mainmenu" to="." method="_on_back_to_mainmenu_pressed"]
